package dbInfo;

import thrift.DbmsInfo;

public abstract class HConnection {
	protected final DbmsInfo DBMSINFO;

	HConnection(DbmsInfo dbmsInfo) {
		DBMSINFO = dbmsInfo;
	}

	public abstract boolean isUseful();

	public abstract void release();

	public boolean match(DbmsInfo dbmsInfo) {
		if (DBMSINFO == null || dbmsInfo == null)
			return false;
		return DBMSINFO.mCompleteConnectionString.equals(dbmsInfo.mCompleteConnectionString);
	}

	/**
	 * just for test,do not use it
	 */
	public void print() {
		System.out.println("----------------------------------");
		System.out.println(DBMSINFO.mType);
		System.out.println(DBMSINFO.mCompleteConnectionString);
		System.out.println(DBMSINFO.mMysqlUsername);
		System.out.println(DBMSINFO.mMysqlPassword);
		System.out.println(DBMSINFO.mVoltdbCapacityMB);
	}
}
